--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.1"
 
     defaultConfig {
-        applicationId "com.motouch.android.timepickerdemo"
+        applicationId "com.motouch.android.demo"
         minSdkVersion 16
         targetSdkVersion 23
         versionCode 1
@@ -22,6 +22,5 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:23.1.0'
-    compile project(':timepicker')
     compile project(':sectorprogressbar')
 }
